# rune

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Makefile  Procfile.dev  README.md  docker-compose.nginx.yml  docker-compose.yml  docker.compose.yml  footer-links-audit.md  heyapi.conf.js  otel-collector-config.yaml  package.json  pnpm-lock.yaml  renovate.json  rune-cli.py  rune.ps1  rune.sh
rune_cli/: .gitignore  README.md  __init__.py  __main__.py  main.py  pyproject.toml  requirements.txt  shell.py
rune_cli/auth/: __init__.py  token_manager.py
rune_cli/client/: __init__.py  api_client.py
rune_cli/commands/: __init__.py  admin.py  auth.py  config.py  credential.py  db.py  execution.py  template.py  user.py  workflow.py
rune_cli/core/: __init__.py  config.py  database.py  docker.py
rune_cli/styles/: __init__.py  theme.py
rune_cli/utils/: __init__.py  output.py  validators.py
services/api/: .dockerignore  .env.example  .env.test  .env.test.example  Dockerfile  Dockerfile.scheduler  README.md  alembic.ini  docker-compose.authentik.yml  docker-compose.dev.yml  docker-compose.test.yml  entrypoint.sh  openapi.yaml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_smith.py  rune_cli.py
services/api/migrations/: MAKEFILE_TEST_PLAN.md  README.md  env.py  script.py.mako
services/api/migrations/versions/: 2025_11_30_2237_9f2ee569e129_initial_schema.py  20260306_0001_workflow_versioning.py  2026_03_04_2300_7658a011f21e_test_msg.py  2026_03_10_1447_ba3dde446818_initial_schema.py  2026_03_10_1500_a1b2c3d4e5f6_add_saml_sso.py  2026_03_11_1200_c7d8e9f0a1b2_add_workflow_versions.py  2026_03_14_1935_d1e2f3a4b5c6_add_scheduled_workflows.py  2026_04_28_2155_fb62ad1bfffc_add_gemini_enum.py  2026_04_29_1200_e7f8a9b0c1d2_use_utc_timestamps.py  2026_05_01_1200_f1a2b3c4d5e6_add_webhook_registrations.py  2026_05_03_2039_193e79e320cc_add_content_hash_to_workflow_version.py  2026_05_24_0000_a1c2e3f4b5d6_add_template_metadata.py  2026_06_02_0140_193e79e320cc_add_content_hash_to_workflow_versions.py
services/api/scripts/: export_template_schema.py  generate_key.py  generate_openapi.py  openapi.py  seed_templates.py  seed_user.py  verify_workflow_version_backfill.py
services/api/src/: app.py
services/api/src/ai_docs/: README.md  __init__.py  sample_workflow.json  signatures.py
services/api/src/auth/: dependencies.py  router.py  schemas.py  security.py  service.py  token_store.py
services/api/src/cli/: README.md  __init__.py  __main__.py  main.py  router.py  schemas.py  service.py  styles.py
services/api/src/core/: config.py  datetime.py  dependencies.py  exception_handlers.py  exceptions.py  field_types.py  llm.py  password.py  permissions.py  policies.py  responses.py  token.py  tool_selection.py  validators.py
services/api/src/credentials/: __init__.py  dependencies.py  encryption.py  permissions.py  router.py  schemas.py  service.py
services/api/src/db/: config.py  models.py  redis.py
services/api/src/decipher/: serializer.py  sir.py
services/api/src/dsl/: __init__.py  workflow_dsl_generated.py
services/api/src/executions/: __init__.py  dependencies.py  router.py  schemas.py  service.py
services/api/src/internal/: dependencies.py  router.py
services/api/src/models/: __init__.py
services/api/src/oauth/: __init__.py  authorize_extras.py  credential_patch.py  credential_tokens.py  refresh.py  router.py  state.py  token_exchange.py
services/api/src/permissions/: dependencies.py  router.py  schemas.py  service.py
services/api/src/queue/: base.py  messages.py  rabbitmq.py  service.py
services/api/src/scheduler/: README.md  __init__.py  daemon.py  router.py  schemas.py  service.py
services/api/src/scryb/: agent.py  data.json  decipher_experiment.ipynb  dependencies.py  gemini-flash-lite.json  generator.py  llama3-3.json  prompts.py  router.py  schemas.py  serialized_data.json  serializer.py  service.py  sir.py
services/api/src/setup/: dependencies.py  router.py  schemas.py  service.py
services/api/src/smith/: README.md  __init__.py  agent.py  cli.py  docs.py  nodes.py  prompts.py  response.py  router.py  schemas.py  schemas.py.bak  service.py  tools.py
services/api/src/templates/: categories.py  dependencies.py  router.py  schemas.py  seeder.py  service.py
services/api/src/users/: dependencies.py  router.py  schemas.py  service.py  utils.py
services/api/src/webhook/: dependencies.py  router.py  service.py
services/api/src/workflow/: constants.py  dependencies.py  permissions.py  policy.py  queries.py  queue.py  router.py  schemas.py  service.py  utils.py
services/api/test/: README.md  conftest.py
services/api/test/auth/: __init__.py  test_auth.py  test_bearer_auth.py  test_first_admin_signup.py
services/api/test/core/: test_config.py  test_datetime.py  test_password.py
services/api/test/credentials/: __init__.py  test_cred.py  test_credential_permissions.py  test_encryption.py
services/api/test/e2e/: conftest.py  test_webhook_e2e.py
services/api/test/executions/: __init__.py  conftest.py  test_executions.py
services/api/test/oauth/: test_oauth_flow.py
services/api/test/scheduled_workflows/: __init__.py  conftest.py  test_01_basic_operations.py  test_02_updates_and_execution.py  test_03_scheduling_logic.py  test_04_concurrency.py  test_05_multiple_workflows.py
services/api/test/setup/: __init__.py  test_setup.py
services/api/test/templates/: __init__.py  fixtures.py  test_increment_race.py  test_template_api.py  (+2 more)
services/archivist/: .env.example  Dockerfile  pyproject.toml
services/archivist/src/: config.py  consumer.py  datetime_utils.py  main.py  models.py  repository.py
services/rtes/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  lints.toml  otel-collector-config.yaml  rustfmt.toml
services/rtes/.cargo/: audit.toml
services/rtes/scripts/: simulate_events.py
services/rtes/src/: config.rs  lib.rs  main.rs
services/rtes/tests/: http_api.rs  lineage_hash.rs  status_message_roundtrip.rs  ws_integration.rs
(+1154 files in other folders)
