[project]
name = "api"
version = "0.1.0"
description = "A comprehensive FastAPI-based REST API service for the Rune workflow automation platform"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aio-pika==9.5.7",
    "alembic==1.17.2",
    "argon2-cffi==23.1.0",
    "asyncpg==0.30.0",
    "cryptography==46.0.5",
    "dspy==3.0.4",
    "fastapi[standard]==0.117.1",
    "langchain==1.1.3",
    "langchain-core==1.2.11",
    "langchain-google-genai==3.2.0",
    "langgraph-checkpoint-postgres==3.0.2",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.11.0",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.1",
    "redis==6.4.0",
    "sqlmodel==0.0.25",
]

[dependency-groups]
dev = [
    "freezegun==1.5.5",
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
