[project]
name = "api"
version = "0.1.0"
description = "A comprehensive FastAPI-based REST API service for the Rune workflow automation platform"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aio-pika==9.6.2",
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "asyncpg==0.31.0",
    "cryptography==46.0.7",
    "dspy==3.2.0",
    "fastapi[standard]==0.136.0",
    "greenlet==3.4.0",
    "langchain==1.2.15",
    "langchain-core==1.3.0",
    "langchain-google-genai==4.2.2",
    "langgraph-checkpoint-postgres==3.0.5",
    "psycopg[binary]==3.3.3",
    "pydantic-settings==2.14.0",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.2",
    "redis==6.4.0",
    "starlette==1.0.0",
    "sqlmodel==0.0.38",
    "python3-saml==1.16.0",
]

[dependency-groups]
dev = [
    "freezegun==1.5.5",
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
