[project]
name = "api"
version = "0.1.0"
description = "A comprehensive FastAPI-based REST API service for the Rune workflow automation platform"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aio-pika==9.6.2",
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "asyncpg==0.31.0",
    "cryptography==48.0.1",
    "fastapi[standard]==0.137.1",
    "greenlet==3.5.1",
    "langchain==1.2.15",
    "langchain-core==1.4.7",
    "langchain-google-genai==4.2.5",
    "langchain-mcp-adapters==0.3.0",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-checkpoint-postgres==3.1.0",
    "litellm>=1.83.7",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.0",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "redis==7.4.1",
    "regex==2026.5.9",
    "starlette==1.3.1",
    "sqlmodel==0.0.38",
    "python3-saml==1.16.0",
]

[dependency-groups]
dev = [
    "freezegun==1.5.5",
    "httpx==0.28.1",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
