[project]
name = "archivist"
version = "0.1.0"
description = "Consumes workflow completion events from RabbitMQ and records them in PostgreSQL"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aio-pika==9.6.2",
    "asyncpg==0.31.0",
    "greenlet==3.4.0",
    "pydantic-settings==2.13.1",
    "sqlmodel==0.0.38",
]
