[package]
name = "rtes"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Async Runtime 
tokio = { version = "1", features = ["full"] }

# Web Framework & WebSockets 
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization 
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Messaging & Database 
lapin = "3.7"
mongodb = "3.4"
redis = { version = "1", features = ["tokio-comp"] }

# Utilities 
uuid = { version = "1.19", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }