[package]
name = "rtes"
version = "0.1.0"
edition = "2024"
description = "Real Time Execution Service"
license = "MIT"
repository = "https://github.com/rune-org/rune"
readme = "README.md"
keywords = ["rune", "execution"]

[dependencies]
# Core Async Runtime 
tokio = { version = "1", features = ["full"] }

# Web Framework & WebSockets 
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# Messaging & Database 
lapin = "3.7"
mongodb = "3.4"
redis = { version = "1", features = ["tokio-comp"] }

# Utilities 
uuid = { version = "1.19", features = ["serde", "v4", "v5", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "local-time",
] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = [
    "tonic",
    "metrics",
    "logs",
] }
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
    "metrics",
    "logs",
] }
opentelemetry-appender-tracing = "0.31"
dotenvy = "0.15"
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["rt", "full"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }


[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_must_use = "deny"
unused_qualifications = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

[lints.clippy]
# Groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific restrictions
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
float_arithmetic = "warn"
indexing_slicing = "warn"

# Noise reduction (allow common patterns)
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"

[dev-dependencies]
tokio-tungstenite = "0.28.0"
tower = { version = "0.5", features = ["util"] }
